Name:                json-exec
Version:             0.0.1
Synopsis:            JSON-RPC 1.0 implementation for targeted for interaction between programs
Homepage:            http://max630.net/json-exec/haskell/
License:             BSD3
License-file:        LICENSE
Author:              Max Kirillov
Maintainer:          max@max630.net
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:     RPC
  
  -- Packages needed in order to build this package.
  -- Build-depends:       
  
  Other-modules:        RPC.Internal.Types, RPC.Internal.IO
