Name:                json-exec
Version:             0.0.1
Synopsis:            JSON-RPC 1.0 implementation for targeted for interaction between programs
Homepage:            http://max630.net/json-exec/haskell/
License:             BSD3
License-file:        LICENSE
Author:              Max Kirillov
Maintainer:          max@max630.net
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:     RPC
  
  -- Packages needed in order to build this package.
  Build-depends:        base ==4.*,
                        process ==1.1.*,
                        aeson >=0.2,
                        attoparsec-enumerator ==0.3.*,
                        hashable,
                        unordered-containers,
                        enumerator,
                        bytestring,
                        attoparsec,
                        transformers
  
  Other-modules:        RPC.Internal.Types, RPC.Internal.IO
